chore: add form section and breadcrumps in washing-showers page

--- a/washing-showers.html
+++ b/washing-showers.html
@@ -117,7 +117,7 @@
             <div class="container-fluid">
                 <div class="row justify-content-between">
                     <div class="col-lg-3">
-                        <div class="w-100 h-100">
+                        <div class="w-100 h-100 pt-lg-5">
                             <aside class="catalog bordered-top">
                                 <p class="px-4 bg-corp text-white py-2 bordered-top mb-0">Каталог</p>
                                 <ul class="list-unstyled border">
@@ -178,6 +178,13 @@
                     </div>
                     <div class="col-xxl-8 col-lg-9">
                         <div class="w-100 h-100">
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb text-corp fw-medium">
+                                    <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+                                    <li class="breadcrumb-item"><a href="index.html#catalog">Каталог</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Системы промывания и обеззараживающие души</li>
+                                </ol>
+                            </nav>
                             <div class="position-relative">
                                 <img src="images/home-page/banner-img.png" alt=""
                                     class="img-fluid object-fit-cover w-100 d-sm-block d-none">
@@ -196,7 +203,7 @@
                 </div>
             </div>
         </section>
-        <section id="newItems" class="py-lg-5 py-3">
+        <section class="py-lg-5 py-3">
             <div class="container-fluid">
                 <h3 class="fs-section-title fw-bold text-corp mb-lg-5 mb-3">
                     Системы промывания и обеззараживающие души
@@ -269,6 +276,46 @@
                     </ul>
                 </div>
 
+            </div>
+        </section>
+        <section class="py-lg-5 py-3">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="w-100 h-100 d-flex flex-column justify-content-center">
+                             <p class="fs-title fw-semibold mb-lg-5 mb-2">
+                                ХОТИТЕ ОФОРМИТЬ ЗАКАЗ?
+                             </p>
+                             <p class="opacity-75 fs-section-title text-balance">Оставьте свои контактные данные любым удобным способом, и мы свяжемся с вами в ближайшее время.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="w-100 h-100 bg-light-grey py-lg-5 py-4 rounded-4">
+                            <h3 class="fs-title text-black mb-lg-5 mb-3 text-center">Обратная связь</h3>
+                            <div class="row gx-0 justify-content-center w-100">
+                                <div class="col-lg-8 col-10">
+                                    <form>
+                                        <div class="mb-lg-5 mb-3">
+                                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Введите e-mail">
+                                        </div>
+                                        <div class="mb-lg-5 mb-3">
+                                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Введите имя">
+                                        </div>
+                                        <div class="mb-lg-5 mb-3">
+                                            <input type="tel" class="form-control" id="exampleInputPhone" placeholder="Введите номер телефона">
+                                        </div>
+                                        <div class="mb-3 mt-3 form-check">
+                                            <input type="checkbox" class="form-check-input me-lg-3" id="exampleCheck1">
+                                            <label class="form-check-label fs-7" for="exampleCheck1">Даю согласие на обработку персональных
+                                                данных</label>
+                                        </div>
+                                        <button class="btn btn-primary btn-rounded mt-lg-5 mx-auto d-block">Отправить</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
