--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="washing-showers.html" class="btn btn-primary btn-primary-long my-lg-5 my-2 mx-auto d-block w-fit-content">Все новости</a>
+                <a href="news.html" class="btn btn-primary btn-primary-long my-lg-5 my-2 mx-auto d-block w-fit-content">Все новости</a>
             </div>
         </section>
     </main>
