fix: item card hover added

--- a/index.html
+++ b/index.html
@@ -275,90 +275,130 @@
                 </h3>
                 <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 gy-5">
                     <div class="col">
-                        <a href="washing-showers.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page/selections/1.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/1.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативная станция для промывания глаз BD-600A
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Портативная станция для промывания глаз BD-600A
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="locks.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page//selections/2.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/2.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
                                     Взрывозащищенный с кабельным подогревом, морозостойкий BD-580
-                                </p>
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="soldering-iron.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page//selections/3.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/3.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Настенный промыватель для глаз BD-508C
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Настенный промыватель для глаз BD-508C
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="grounding-systems.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page//selections/4.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/4.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Закрытый безопасный душ из нержавеющей стали BD-602
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Закрытый безопасный душ из нержавеющей стали BD-602
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="lightning-protection-systems.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page//selections/5.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/5.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Экологичное электронный стартер экзотермической сварки 2.0
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Экологичное электронный стартер экзотермической сварки 2.0
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="cable-clamps.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page//selections/6.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/6.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативный промыватель глаз BD-570B
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Портативный промыватель глаз BD-570B
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="drag-lower-systems.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page//selections/7.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/7.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Комплект инструментов для экзотермической сварки
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Комплект инструментов для экзотермической сварки
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="rescue-tripod.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/home-page//selections/8.png" alt="" class="img-fluid object-fit-cover w-100 h-lg-70">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/8.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height  bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-center text-balance lh-1">
-                                    Халат хирургический одноразовый, нестерильный халат из нетканого материала хим.нитей SPUNBOND (30 г/м2)
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Халат хирургический одноразовый, нестерильный халат из нетканого материала хим.нитей SPUNBOND (30 г/м2)
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
