--- a/item-card-1.html
+++ b/item-card-1.html
@@ -188,11 +188,26 @@
                                 </ol>
                             </nav>
                             <div class="px-lg-3 mt-5">
-                                <h5 class="ff-section-title mb-5">Портативный промыватель глаз с ручной тележкой BD-600Bз</h5>
+                                <h5 class="fs-section-title mb-5">Портативный промыватель глаз с ручной тележкой BD-600Bз</h5>
                                 <div class="row gx-lg-5 gx-0 gy-lg-5 gy-3">
                                     <div class="col-lg-6">
-                                        <div class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <div class="w-100 h-100 d-flex flex-column justify-content-center align-items-center">
                                             <img src="images/eye-washing-pages/card-item/1.png" alt="" class="img-fluid object-fit-cover">
+                                            <!-- render extra photo if got it -->
+                                             <div class="row gx-md-5 gx-0 gy-4 mt-3 justify-content-center">
+                                                <div class="col-lg-6 col-10">
+                                                    <img src="images/item-card-extra-photos/1.png" alt="" class="img-fluid object-fit-cover w-100">
+                                                </div>
+                                                <div class="col-lg-6 col-10">
+                                                    <img src="images/item-card-extra-photos/2.png" alt="" class="img-fluid object-fit-cover w-100">
+                                                </div>
+                                                <div class="col-lg-6 col-10">
+                                                    <img src="images/item-card-extra-photos/3.png" alt="" class="img-fluid object-fit-cover w-100">
+                                                </div>
+                                                <div class="col-lg-6 col-10">
+                                                    <img src="images/item-card-extra-photos/4.png" alt="" class="img-fluid object-fit-cover w-100">
+                                                </div>
+                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -210,6 +225,7 @@
                                             </p>
                                         </div>
                                     </div>
+                                    <!-- render table if have it -->
                                     <div class="col-lg-12">
                                         <div class="w-100 h-100">
                                             <div class="row gx-lg-2 gx-md-1">
@@ -317,50 +333,66 @@
                 </h3>
                 <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 gy-5">
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/1.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/1.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативный промыватель глаз с ручной тележкой BD-600B
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Портативная станция для промывания глаз BD-600A
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/2.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/2.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативный промыватель глаз BD-570B
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Взрывозащищенный с кабельным подогревом, морозостойкий BD-580
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/3.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/3.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативная станция для промывания глаз BD-600A
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Настенный промыватель для глаз BD-508C
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/4.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/home-page/selections/4.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light  px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативный промыватель глаз BD-600B
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Закрытый безопасный душ из нержавеющей стали BD-602
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
