Final review: all pages validated

--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                                 <ul class="list-unstyled border">
                                     <li class="border-bottom px-2 py-2">
                                         <div class="btn-group dropend d-lg-block d-none">
-                                            <a href="#" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Установки для промывки глаз
                                             </a>
                                             <ul class="dropdown-menu py-0 w-max-content-lg rounded-0 custom-transform">
