--- a/portative-washing.html
+++ b/portative-washing.html
@@ -123,7 +123,7 @@
                                 <ul class="list-unstyled border">
                                     <li class="border-bottom px-2 py-2">
                                         <div class="btn-group dropend d-lg-block d-none">
-                                            <a href="#" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Установки для промывки глаз
                                             </a>
                                             <ul class="dropdown-menu py-0 w-max-content-lg rounded-0 custom-transform">
@@ -210,50 +210,66 @@
                 </h3>
                 <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 gy-5">
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/1.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/eye-washing-pages/portative-systems/1.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативный промыватель глаз с ручной тележкой BD-600B
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Портативная станция для промывания глаз BD-600A
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/2.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/eye-washing-pages/portative-systems/2.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативный промыватель глаз BD-570B
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Взрывозащищенный с кабельным подогревом, морозостойкий BD-580
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/3.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/eye-washing-pages/portative-systems/3.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативная станция для промывания глаз BD-600A
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Настенный промыватель для глаз BD-508C
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col">
-                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative catalog-link">
-                            <img src="images/eye-washing-pages/portative-systems/4.png" alt=""
-                                class="img-fluid object-fit-cover w-100">
+                        <a href="item-card-1.html" class="d-block w-100 h-100 position-relative pb-lg-5 pb-3 catalog-link">
+                            <div class="overflow-hidden">
+                                <img src="images/eye-washing-pages/portative-systems/4.png" alt="" class="img-fluid object-fit-cover w-100">
+                            </div>
                             <div
-                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover fw-light  px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
-                                <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1">
-                                    Портативный промыватель глаз BD-600B
-                                </p>
+                                class="position-absolute catalog-info-box catalog-info-box-height catalog-info-hover bg-grey-dark fw-light text-white px-1 py-2 rounded-2 w-100 d-flex align-items-center justify-content-center">
+                                <div class="position-relative">
+                                    <p class="mb-0 fs-paragraph four-line text-balance text-center lh-1 text-default">
+                                        Закрытый безопасный душ из нержавеющей стали BD-602
+                                    </p>
+                                    <span class="fs-paragraph text-center text-hover position-absolute">Подробнее</span>
+                                </div>
                             </div>
                         </a>
                     </div>
